exports[`createToteutus > should be able to create ammatillinen tutkinnon osa toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [],
    "aloituspaikat": null,
    "ammattinimikkeet": [],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "hakuaika": {
      "alkaa": "2050-04-01T00:00",
      "paattyy": "2050-09-01T00:00"
    },
    "hakulomakeLinkki": {
      "fi": "http://example.com"
    },
    "hakulomaketyyppi": "muu",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {
      "fi": "<p>lisätiedot</p>"
    },
    "lisatietoaValintaperusteista": {
      "fi": "<p>lisätiedot valintaperusteista</p>"
    },
    "lukiolinjaKoodiUri": null,
    "opetus": {
      "A1JaA2Kielivalikoima": [],
      "B1Kielivalikoima": [],
      "B2Kielivalikoima": [],
      "B3Kielivalikoima": [],
      "aidinkieliKielivalikoima": [],
      "apuraha": null,
      "diplomiKoodiUrit": [],
      "diplomiKuvaus": {},
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "muuKielivalikoima": [],
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [],
    "toteutusjaksot": [],
    "tyyppi": "amm-tutkinnon-osa",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create ammatillinen toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [],
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": null,
    "opetus": {
      "A1JaA2Kielivalikoima": [],
      "B1Kielivalikoima": [],
      "B2Kielivalikoima": [],
      "B3Kielivalikoima": [],
      "aidinkieliKielivalikoima": [],
      "apuraha": null,
      "diplomiKoodiUrit": [],
      "diplomiKuvaus": {},
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "muuKielivalikoima": [],
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_1800",
        "linkki": {
          "fi": "http://linkki.com"
        },
        "otsikko": {
          "fi": "osaamisala_0 otsikko"
        }
      }
    ],
    "toteutusjaksot": [],
    "tyyppi": "amm",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create korkeakoulu toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [
      {
        "kuvaus": {
          "fi": "<p>osaamisalan kuvaus</p>"
        },
        "linkki": {
          "fi": "http://linkki.com"
        },
        "nimi": {
          "fi": "osaamisalan nimi"
        },
        "otsikko": {
          "fi": "osaamisalan otsikko"
        }
      }
    ],
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kuvaus": {
      "fi": "<p>Toteutuksen kuvaus</p>"
    },
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": null,
    "opetus": {
      "A1JaA2Kielivalikoima": [],
      "B1Kielivalikoima": [],
      "B2Kielivalikoima": [],
      "B3Kielivalikoima": [],
      "aidinkieliKielivalikoima": [],
      "apuraha": {
        "kuvaus": {
          "fi": "<p>apuraha kuvaus</p>"
        },
        "max": 20,
        "min": 20,
        "yksikko": "euro"
      },
      "diplomiKoodiUrit": [],
      "diplomiKuvaus": {},
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "lukuvuosimaksu",
      "maksunMaara": 10,
      "muuKielivalikoima": [],
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1",
        "oppilaitoksenopetuskieli_4#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [],
    "toteutusjaksot": [],
    "tyyppi": "yo",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": [
      {
        "kuvaus": {
          "fi": "<p>osaamisalan kuvaus</p>"
        },
        "linkki": {
          "fi": "http://linkki.com"
        },
        "nimi": {
          "fi": "osaamisalan nimi"
        },
        "otsikko": {
          "fi": "osaamisalan otsikko"
        }
      }
    ]
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "toteutuksen nimi"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`createToteutus > should be able to create lukio toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [],
    "aloituspaikat": null,
    "ammattinimikkeet": [
      {
        "arvo": "ammattinimike",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "avainsana",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kuvaus": {},
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": "lukiolinjat_0000#2",
    "opetus": {
      "A1JaA2Kielivalikoima": [
        "kieli_en#1"
      ],
      "B1Kielivalikoima": [
        "kieli_sv#1"
      ],
      "B2Kielivalikoima": [
        "kieli_de#1"
      ],
      "B3Kielivalikoima": [
        "kieli_es#1"
      ],
      "aidinkieliKielivalikoima": [
        "kieli_fi#1"
      ],
      "apuraha": null,
      "diplomiKoodiUrit": [
        "lukiodiplomit_6#1"
      ],
      "diplomiKuvaus": {
        "fi": "<p>Diplomi kuvaus</p>"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "alkamiskausi ja -vuosi",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": "kausi_k#1",
        "koulutuksenAlkamispaivamaara": null,
        "koulutuksenAlkamisvuosi": 2035,
        "koulutuksenPaattymispaivamaara": null
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_01#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 10,
      "muuKielivalikoima": [
        "kieli_zh#1"
      ],
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>suunniteltu kesto kuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [],
    "toteutusjaksot": [],
    "tyyppi": "lk",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "nimi"
        },
        "puhelinnumero": {
          "fi": "puhelin"
        },
        "sahkoposti": {
          "fi": "sähköposti"
        },
        "titteli": {
          "fi": "titteli"
        },
        "wwwSivu": {
          "fi": "http://verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": []
  },
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Lukio"
  },
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "1.2.2.1.1.1"
  ],
  "tila": "julkaistu"
};

exports[`editToteutus > should be able to edit ammatillinen toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [],
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kuvaus": {},
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": null,
    "opetus": {
      "A1JaA2Kielivalikoima": [],
      "B1Kielivalikoima": [],
      "B2Kielivalikoima": [],
      "B3Kielivalikoima": [],
      "aidinkieliKielivalikoima": [],
      "apuraha": null,
      "diplomiKoodiUrit": [],
      "diplomiKuvaus": {},
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "muuKielivalikoima": [],
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_0",
        "linkki": {
          "fi": "https://www.salpaus.fi/koulutusesittely/elaintenhoitaja/"
        },
        "otsikko": {
          "fi": "Otsikko"
        }
      }
    ],
    "toteutusjaksot": [],
    "tyyppi": "amm",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": []
  },
  "modified": "2019-03-26T10:19",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit korkeakoulu toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [
      {
        "kuvaus": {
          "fi": "<p>osaamisalan kuvaus</p>"
        },
        "linkki": {
          "fi": "http://linkki.com"
        },
        "nimi": {
          "fi": "osaamisalan nimi"
        },
        "otsikko": {
          "fi": "osaamisalan otsikko"
        }
      }
    ],
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kuvaus": {},
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": null,
    "opetus": {
      "A1JaA2Kielivalikoima": [],
      "B1Kielivalikoima": [],
      "B2Kielivalikoima": [],
      "B3Kielivalikoima": [],
      "aidinkieliKielivalikoima": [],
      "apuraha": null,
      "diplomiKoodiUrit": [],
      "diplomiKuvaus": {},
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "muuKielivalikoima": [],
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [],
    "toteutusjaksot": [],
    "tyyppi": "yo",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": [
      {
        "kuvaus": {
          "fi": "<p>osaamisalan kuvaus</p>"
        },
        "linkki": {
          "fi": "http://linkki.com"
        },
        "nimi": {
          "fi": "osaamisalan nimi"
        },
        "otsikko": {
          "fi": "osaamisalan otsikko"
        }
      }
    ]
  },
  "modified": "2019-03-26T10:19",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit lukio toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [],
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "ilmoittautumislinkki": {},
    "kuvaus": {},
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": "lukiolinjat_0#1",
    "opetus": {
      "A1JaA2Kielivalikoima": [
        "kieli_1#1"
      ],
      "B1Kielivalikoima": [
        "kieli_3#1"
      ],
      "B2Kielivalikoima": [
        "kieli_2#1"
      ],
      "B3Kielivalikoima": [
        "kieli_4#1"
      ],
      "aidinkieliKielivalikoima": [
        "kieli_4#1"
      ],
      "apuraha": null,
      "diplomiKoodiUrit": [
        "lukiodiplomit_1#1"
      ],
      "diplomiKuvaus": {
        "fi": "<p>Fi diplomi</p>"
      },
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "muuKielivalikoima": [
        "kieli_4#1"
      ],
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [],
    "toteutusjaksot": [],
    "tyyppi": "lk",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": []
  },
  "modified": "2019-03-26T10:19",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};

exports[`editToteutus > should be able to edit tutkinnon osa toteutus #0`] =
{
  "esikatselu": false,
  "kielivalinta": [
    "fi"
  ],
  "koulutusOid": "1.2.1.1.1.1",
  "metadata": {
    "alemmanKorkeakoulututkinnonOsaamisalat": [],
    "aloituspaikat": null,
    "ammatillinenPerustutkintoErityisopetuksena": false,
    "ammattinimikkeet": [
      {
        "arvo": "eläintenhoitaja",
        "kieli": "fi"
      }
    ],
    "asiasanat": [
      {
        "arvo": "koira",
        "kieli": "fi"
      },
      {
        "arvo": "eläintenhoito",
        "kieli": "fi"
      }
    ],
    "hakuaika": null,
    "hakulomakeLinkki": {},
    "hakulomaketyyppi": "ei sähköistä",
    "hakutermi": "hakeutuminen",
    "ilmoittautumislinkki": {},
    "kuvaus": {},
    "laajuus": null,
    "laajuusyksikkoKoodiUri": null,
    "lisatietoaHakeutumisesta": {},
    "lisatietoaValintaperusteista": {},
    "lukiolinjaKoodiUri": null,
    "opetus": {
      "A1JaA2Kielivalikoima": [],
      "B1Kielivalikoima": [],
      "B2Kielivalikoima": [],
      "B3Kielivalikoima": [],
      "aidinkieliKielivalikoima": [],
      "apuraha": null,
      "diplomiKoodiUrit": [],
      "diplomiKuvaus": {},
      "koulutuksenAlkamiskausi": {
        "alkamiskausityyppi": "tarkka alkamisajankohta",
        "henkilokohtaisenSuunnitelmanLisatiedot": {},
        "koulutuksenAlkamiskausiKoodiUri": null,
        "koulutuksenAlkamispaivamaara": "2021-04-16T00:00",
        "koulutuksenAlkamisvuosi": null,
        "koulutuksenPaattymispaivamaara": "2021-12-12T00:00"
      },
      "lisatiedot": [
        {
          "otsikkoKoodiUri": "koulutuksenlisatiedot_0#1",
          "teksti": {
            "fi": "<p>koulutuksenlisatiedot_0 kuvaus</p>"
          }
        }
      ],
      "maksullisuusKuvaus": {
        "fi": "<p>Maksullisuus kuvaus</p>"
      },
      "maksullisuustyyppi": "maksullinen",
      "maksunMaara": 20,
      "muuKielivalikoima": [],
      "onkoApuraha": true,
      "opetusaikaKoodiUrit": [
        "opetusaikakk_1#1"
      ],
      "opetusaikaKuvaus": {
        "fi": "<p>Opetusaika kuvaus</p>"
      },
      "opetuskieletKuvaus": {
        "fi": "<p>Opetuskieli kuvaus</p>"
      },
      "opetuskieliKoodiUrit": [
        "oppilaitoksenopetuskieli_1#1"
      ],
      "opetustapaKoodiUrit": [
        "opetuspaikkakk_1#1"
      ],
      "opetustapaKuvaus": {
        "fi": "<p>Opetustapa kuvaus</p>"
      },
      "suunniteltuKestoKuukaudet": 6,
      "suunniteltuKestoKuvaus": {
        "fi": "<p>Fi suunniteltuKestoKuvaus</p>"
      },
      "suunniteltuKestoVuodet": 2
    },
    "osaamisalat": [
      {
        "koodiUri": "osaamisala_0",
        "linkki": {
          "fi": "https://www.salpaus.fi/koulutusesittely/elaintenhoitaja/"
        },
        "otsikko": {
          "fi": "Otsikko"
        }
      }
    ],
    "toteutusjaksot": [],
    "tyyppi": "amm-tutkinnon-osa",
    "yhteyshenkilot": [
      {
        "nimi": {
          "fi": "Fi nimi"
        },
        "puhelinnumero": {
          "fi": "Fi puhelinnumero"
        },
        "sahkoposti": {
          "fi": "Fi sähköposti"
        },
        "titteli": {
          "fi": "Fi titteli"
        },
        "wwwSivu": {
          "fi": "http://fi-verkkosivu"
        }
      }
    ],
    "ylemmanKorkeakoulututkinnonOsaamisalat": []
  },
  "modified": "2019-03-26T10:19",
  "muokkaaja": "1.2.246.562.24.62301161440",
  "nimi": {
    "fi": "Koulutuskeskus Salpaus, jatkuva haku, eläintenhoitaja"
  },
  "oid": "1.3.1.1.1.1",
  "organisaatioOid": "1.1.1.1.1.1",
  "sorakuvausId": null,
  "tarjoajat": [
    "5.1.1.1.1.1",
    "3.1.1.1.1.1"
  ],
  "tila": "tallennettu"
};
